tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved binding 'token'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" bytes=210
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari" line=13 column=22 end_line=13 end_column=27 byte_start=200 byte_end=205 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-after-move.ari:13:22\n    |\n 13 |   return inspect(ref token);\n    |                      ^^^^^"
